--- a/memory.css
+++ b/memory.css
@@ -5,6 +5,7 @@ body{
     width: 100%;
     margin: auto;
     text-align: center;
+    background: #0677FF;
 
 }
 
@@ -54,21 +55,21 @@ button{
     color: white;
     padding: 9px 32px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 5px;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    background: #0988FF;
+    background: #0677FF;
 }
 
 button:active{
     background: white;
-    color:  #0988FF;
+    color:  #0677FF;
 }
 #info:hover{
     background: white;
-    color:  #0988FF;
+    color:  #0677FF;
 }
 
 
@@ -82,8 +83,9 @@ button#game_start{
     cursor: pointer;
 }
 
-header{background-color: #555555;
-    width: 100%}
+header{background-color: rgba(85,85,85,0.8);
+    width: 100%;
+}
 
 #main{
     display: block;
@@ -102,16 +104,16 @@ header{background-color: #555555;
     width: 42%;
     text-align: center;
     padding:20px 10px 20px 10px;
-    border-radius: 15px;
-    background: #666666;
+    border-radius: 10px;
+    background: rgba(85,85,85,0.8);
 }
 
 .test-banner{
     font-size: 16px;
-    padding-left: 15px;
+    padding-left: 10px;
     padding-bottom: 3px;
     color:yellow;
-    text-align: left;
+    text-align: center;
     font-family: "Courier 10 Pitch", serif;
 }
 
@@ -135,7 +137,7 @@ img{
 .flip-box {
     display: inline-block;
     background-color: transparent;
-    border-radius: 15px;
+    border-radius: 10px;
     width: 170px;
     height: 170px;
     perspective: 1000px;
@@ -147,13 +149,13 @@ img{
     width: 100%;
     height: 100%;
     text-align: center;
-    border-radius: 15px;
+    border-radius: 10px;
     transition: transform 0.8s;
     transform-style: preserve-3d;
 }
 .flip-box-front, .flip-box-back {
     position: absolute;
-    border-radius: 15px;
+    border-radius: 10px;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
@@ -179,7 +181,7 @@ img{
         text-align: center;
         padding-top: 20px;
         padding-bottom: 20px;
-        border-radius: 15px;
+        border-radius: 10px;
         background: #666666;
     }
 }
