--- a/memory.css
+++ b/memory.css
@@ -1,15 +1,17 @@
-*{box-sizing: border-box}
+* {
+    box-sizing: border-box;
+}
 
-body{
+body {
+    box-sizing: border-box;
     height: 100vh;
     width: 100%;
     margin: auto;
-    text-align: center;
     background: #0677FF;
 
 }
 
-.menu{
+.menu {
     width: 100%;
     text-align: center;
     display: inline-block;
@@ -30,7 +32,7 @@ body{
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
     right: 0;
 }
@@ -44,13 +46,17 @@ body{
     width: 300px;
 }
 
-.dropdown-content a:hover {background-color: #ddd;
-    width: 500px;}
+.dropdown-content a:hover {
+    background-color: #ddd;
+    width: 500px;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
-button{
-    width:25%;
+button {
+    width: 25%;
     border: none;
     color: white;
     padding: 9px 32px;
@@ -63,150 +69,144 @@ button{
     background: #0677FF;
 }
 
-button:active{
+button:active {
     background: white;
-    color:  #0677FF;
-}
-#info:hover{
-    background: white;
-    color:  #0677FF;
+    color: #0677FF;
 }
 
+#info:hover {
+    background: white;
+    color: #0677FF;
+}
 
-button#info{
+button#info {
     width: 100%;
-    cursor:help;
+    cursor: help;
 }
-button#game_start{
+
+button#game_start {
     float: left;
     margin-left: 12.5%;
     cursor: pointer;
 }
 
-header{background-color: rgba(85,85,85,0.8);
+header {
+    background-color: rgba(85, 85, 85, 0.8);
     width: 100%;
 }
 
-#main{
+#main {
     display: block;
     width: 100%;
-    text-align: center;
-    background: url("images/background.png")  no-repeat center;
+    background: url("images/background.png") no-repeat center;
     background-size: cover;
     padding-top: 30px;
     padding-bottom: 31px;
+    text-align: center;
 }
 
-.container{
+.container {
+    width: 42%;
     display: block;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
-    width: 42%;
-    text-align: center;
-    padding:20px 10px 20px 10px;
+    padding: 20px 10px;
+
     border-radius: 10px;
-    background: rgba(85,85,85,0.8);
+    background-color: rgba(85, 85, 85, 0.8);
 }
 
-.test-banner{
+.test-banner {
     font-size: 16px;
     padding-left: 10px;
     padding-bottom: 3px;
-    color:yellow;
+    color: yellow;
     text-align: center;
     font-family: "Courier 10 Pitch", serif;
 }
 
-h2{
+h2 {
     font-size: 40px;
     padding: 0;
-    margin:0;
+    margin: 0;
 }
 
-#game_start{
+#game_start {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-img{
-    width: 100%;
-    height: 100%;
-}
 
 .flip-box {
+    text-align: left;
     display: inline-block;
-    background-color: transparent;
+    background-color: yellow;
     border-radius: 10px;
     width: 170px;
     height: 170px;
     perspective: 1000px;
     margin: 3px;
     cursor: pointer;
-}
-.flip-box-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    border-radius: 10px;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+
 }
-.flip-box-front, .flip-box-back {
+
+.cards {
+    margin: auto;
+    width: 170px;
+    height: 170px;
+    padding: 5px;
     position: absolute;
     border-radius: 10px;
-    width: 100%;
-    height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-.flip-box-front {
-    background-color:yellow;
-    color: black;
-}
-.flip-box-back {
+
+.arcana {
     border: 7px solid yellow;
     background-color: white;
-    color: white;
     transform: rotateY(180deg);
 }
 
-@media screen and (max-width:1720px) {
-    .container{
+
+@media screen and (max-width: 1720px) {
+    .container {
+        width: 42%;
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 50%;
-        text-align: center;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        border-radius: 10px;
-        background: #666666;
     }
 }
-@media screen and (max-width:1430px) {
-    .container{
+
+@media screen and (max-width: 1430px) {
+    .container {
         width: 60%;
     }
 }
-@media screen and (max-width:1200px) {
-    .container{
+
+@media screen and (max-width: 1200px) {
+    .container {
         width: 70%;
     }
 }
-@media screen and (max-width:1030px) {
-    .container{
+
+@media screen and (max-width: 1030px) {
+    .container {
         width: 80%;
     }
 }
-@media screen and (max-width:900px) {
-    .container{
+
+@media screen and (max-width: 900px) {
+    .container {
         width: 90%;
     }
 }
-@media screen and (max-width:800px) {
-    .container{
+
+@media screen and (max-width: 800px) {
+    .container {
         width: 100%;
     }
 }
